test/spec_vectors/global/fail/module_9.wat
(module (global i32 (i32.ctz (i32.const 0))))